PyDict support different key type