@@ -38,12 +38,19 @@ public sealed interface PyValue {
     /**
      * represent Python {@code ()}.
      */
-    PyTuple0 EMPTY_TUPLE = new PyTuple0();
+    PyTuple EMPTY_TUPLE = new PyTuple0();
 
     /**
      * represent Python {@code {}}.
      */
-    PyDict EMPTY_DICT = new PyDict(List.of(), List.of());
+    PySet EMPTY_SET = new PySet(List.of());
+
+    /**
+     * represent Python {@code {}}.
+     */
+    PyDict EMPTY_DICT = new PyGeneralDict(List.of(), List.of());
+
+    String type();
 
     static PyValue valueOf(@Nullable Object object) {
         return switch (object) {
@@ -54,34 +61,53 @@ public sealed interface PyValue {
             case BigInteger i -> new PyIntBig(i);
             case double f -> new PyFloat(f);
             case String s -> new PyStr(s);
+            case List<?> list when list.isEmpty() -> EMPTY_LIST;
             case List<?> list -> new PyList(list.stream().map(PyValue::valueOf).toList());
-            case Set<?> set -> new PySet(set.stream().map(PyValue::valueOf).collect(Collectors.toSet()));
-            case Map<?, ?> map -> {
-                if (map.isEmpty()) {
-                    yield new PyDict();
-                } else {
-                    var k = new ArrayList<String>();
-                    var v = new ArrayList<PyValue>();
-                    for (var e : map.entrySet()) {
-                        if (e.getKey() instanceof String ek) {
-                            k.add(ek);
-                            v.add(valueOf(e.getValue()));
-                        } else {
-                            throw new RuntimeException("map key not a string : " + e.getKey());
-                        }
-                    }
-                    yield new PyDict(k, v);
+            case Set<?> set when set.isEmpty() -> EMPTY_SET;
+            case Set<?> set -> new PySet(set.stream().map(PyValue::valueOf).collect(Collectors.toList()));
+            case Map<?, ?> map when map.isEmpty() -> EMPTY_DICT;
+            case Map<?, ?> map when isAllStrKeys(map) -> {
+                var k = new ArrayList<String>();
+                var v = new ArrayList<PyValue>();
+                for (var e : map.entrySet()) {
+                    k.add((String) e.getKey());
+                    v.add(valueOf(e.getValue()));
                 }
+                yield new PyStrDict(k, v);
+            }
+            case Map<?, ?> map -> {
+                var k = new ArrayList<PyValue>();
+                var v = new ArrayList<PyValue>();
+                for (var e : map.entrySet()) {
+                    k.add(valueOf(e.getKey()));
+                    v.add(valueOf(e.getValue()));
+                }
+                yield new PyGeneralDict(k, v);
             }
             case PyValue v -> v;
             default -> throw new RuntimeException("not a python representable literal value : " + object);
         };
     }
 
+    private static boolean isAllStrKeys(Map<?, ?> map) {
+        for (var o : map.keySet()) {
+            if (!(o instanceof String)) return false;
+        }
+        return true;
+    }
+
+    interface PyHashable {
+    }
+
     /**
      * represent Python {@code None} type.
      */
-    record PyNone() implements PyValue {
+    record PyNone() implements PyValue, PyHashable {
+        @Override
+        public String type() {
+            return "NoneType";
+        }
+
         @Override
         public String toString() {
             return "None";
@@ -93,7 +119,12 @@ public sealed interface PyValue {
      *
      * @param value boolean value.
      */
-    record PyBool(boolean value) implements PyValue {
+    record PyBool(boolean value) implements PyValue, PyHashable {
+        @Override
+        public String type() {
+            return "bool";
+        }
+
         @Override
         public String toString() {
             return "bool(" + value + ")";
@@ -103,7 +134,25 @@ public sealed interface PyValue {
     /**
      * represent Python {@code int} type.
      */
-    sealed interface PyInt extends PyValue {
+    sealed interface PyInt extends PyValue, PyHashable {
+
+        static PyInt of(int value) {
+            return new PyInt32(value);
+        }
+
+        static PyInt of(long value) {
+            return new PyInt64(value);
+        }
+
+        static PyInt of(BigInteger value) {
+            return new PyIntBig(value);
+        }
+
+        @Override
+        default String type() {
+            return "int";
+        }
+
         /**
          * {@return is it a zero value}
          */
@@ -138,6 +187,18 @@ public sealed interface PyValue {
          * @return value
          */
         BigInteger toBigInteger();
+
+        static boolean equals(PyInt i1, PyInt i2) {
+            try {
+                return i1.toInt() == i2.toInt();
+            } catch (ArithmeticException e) {
+            }
+            try {
+                return i1.toLong() == i2.toLong();
+            } catch (ArithmeticException e) {
+            }
+            return i1.toBigInteger().equals(i2.toBigInteger());
+        }
     }
 
     /**
@@ -175,6 +236,11 @@ public sealed interface PyValue {
         public String toString() {
             return "int(" + value + ")";
         }
+
+        @Override
+        public boolean equals(Object obj) {
+            return obj instanceof PyInt that && PyInt.equals(this, that);
+        }
     }
 
     /**
@@ -207,6 +273,11 @@ public sealed interface PyValue {
         @Override
         public BigInteger toBigInteger() {
             return BigInteger.valueOf(value);
+        }
+
+        @Override
+        public boolean equals(Object obj) {
+            return obj instanceof PyInt that && PyInt.equals(this, that);
         }
 
         @Override
@@ -247,6 +318,11 @@ public sealed interface PyValue {
         }
 
         @Override
+        public boolean equals(Object obj) {
+            return obj instanceof PyInt that && PyInt.equals(this, that);
+        }
+
+        @Override
         public String toString() {
             return "int(" + value + ")";
         }
@@ -257,7 +333,21 @@ public sealed interface PyValue {
      *
      * @param value double value
      */
-    record PyFloat(double value) implements PyValue {
+    record PyFloat(double value) implements PyValue, PyHashable {
+
+        public static PyFloat of(float value) {
+            return new PyFloat(value);
+        }
+
+        public static PyFloat of(double value) {
+            return new PyFloat(value);
+        }
+
+        @Override
+        public String type() {
+            return "float";
+        }
+
         @Override
         public String toString() {
             return "float(" + value + ")";
@@ -270,11 +360,6 @@ public sealed interface PyValue {
      * However, it is designed more like a {@code Collection<T>}.
      */
     sealed interface PyIterable extends PyValue {
-
-        /**
-         * {@return the type description of the collection.}
-         */
-        String rawTypeStr();
 
         /**
          * {@return a java {@link List} of value.}
@@ -323,8 +408,8 @@ public sealed interface PyValue {
         default List<PyTuple2<PyInt32, PyValue>> enumerate() {
             var iter = iter();
             return IntStream.range(0, iter.size())
-                .mapToObj(i -> new PyTuple2<>(new PyInt32(i), iter.get(i)))
-                .toList();
+              .mapToObj(i -> new PyTuple2<>(new PyInt32(i), iter.get(i)))
+              .toList();
         }
 
         /**
@@ -341,7 +426,7 @@ public sealed interface PyValue {
                 if (elements.get(i) instanceof PyInt pi) {
                     ret[i] = pi.toInt();
                 } else {
-                    throw new RuntimeException("not a python int " + rawTypeStr());
+                    throw new RuntimeException("not a python int " + type());
                 }
             }
             return ret;
@@ -361,7 +446,7 @@ public sealed interface PyValue {
                 switch (elements.get(i)) {
                 case PyInt pi -> ret[i] = pi.toDouble();
                 case PyFloat(var value) -> ret[i] = value;
-                default -> throw new RuntimeException("not a python float " + rawTypeStr());
+                default -> throw new RuntimeException("not a python float " + type());
                 }
             }
             return ret;
@@ -381,7 +466,7 @@ public sealed interface PyValue {
                 if (elements.get(i) instanceof PyStr(var value)) {
                     ret[i] = value;
                 } else {
-                    throw new RuntimeException("not a python str " + rawTypeStr());
+                    throw new RuntimeException("not a python str " + type());
                 }
             }
             return ret;
@@ -390,19 +475,49 @@ public sealed interface PyValue {
         /**
          * A helper method for {@code toString()}.
          *
+         * @param prefix
+         * @param suffix
          * @return a comma-separated list of stringified elements.
          */
-        default String toStringIter() {
-            return iter().stream().map(PyValue::toString).collect(Collectors.joining(", "));
+        default String toStringIter(String prefix, String suffix) {
+            return iter().stream().map(PyValue::toString).collect(Collectors.joining(", ", prefix, suffix));
         }
     }
 
     /**
      * represent Python {@code tuple} type.
      */
-    sealed interface PyTuple extends PyIterable {
+    sealed interface PyTuple extends PyIterable, PyHashable {
+
+        static PyTuple of() {
+            return EMPTY_TUPLE;
+        }
+
+        static PyTuple of(PyValue v) {
+            return new PyTuple1<>(v);
+        }
+
+        static PyTuple of(PyValue v1, PyValue v2) {
+            return new PyTuple2<>(v1, v2);
+        }
+
+        static PyTuple of(PyValue v1, PyValue v2, PyValue v3) {
+            return new PyTuple3<>(v1, v2, v3);
+        }
+
+        static PyTuple of(List<PyValue> elements) {
+            return switch (elements.size()) {
+                case 0 -> EMPTY_TUPLE;
+                case 1 -> new PyTuple1<>(elements.get(0));
+                case 2 -> new PyTuple2<>(elements.get(0), elements.get(1));
+                case 3 -> new PyTuple3<>(elements.get(0), elements.get(1), elements.get(2));
+                default -> new PyTupleN(elements);
+            };
+        }
+
+
         @Override
-        default String rawTypeStr() {
+        default String type() {
             return "tuple";
         }
 
@@ -413,11 +528,6 @@ public sealed interface PyValue {
          */
         default PyList asList() {
             return new PyList(iter());
-        }
-
-        @Override
-        default String toStringIter() {
-            return "(" + PyIterable.super.toStringIter() + ")";
         }
     }
 
@@ -443,6 +553,11 @@ public sealed interface PyValue {
         @Override
         public PyList asList() {
             return PyValue.EMPTY_LIST;
+        }
+
+        @Override
+        public boolean equals(Object obj) {
+            return obj instanceof PyTuple t && t.size() == 0;
         }
 
         @Override
@@ -474,6 +589,11 @@ public sealed interface PyValue {
             } catch (RuntimeException e) {
                 return false;
             }
+        }
+
+        @Override
+        public boolean equals(Object obj) {
+            return obj instanceof PyTuple t && t.size() == 1 && value.equals(t.get(0));
         }
 
         @Override
@@ -511,8 +631,16 @@ public sealed interface PyValue {
         }
 
         @Override
+        public boolean equals(Object obj) {
+            return obj instanceof PyTuple t
+                   && t.size() == 2
+                   && first.equals(t.get(0))
+                   && second.equals(t.get(1));
+        }
+
+        @Override
         public String toString() {
-            return PyTuple.super.toStringIter();
+            return toStringIter("(", ")");
         }
     }
 
@@ -546,8 +674,17 @@ public sealed interface PyValue {
         }
 
         @Override
+        public boolean equals(Object obj) {
+            return obj instanceof PyTuple t
+                   && t.size() == 3
+                   && first.equals(t.get(0))
+                   && second.equals(t.get(1))
+                   && third.equals(t.get(2));
+        }
+
+        @Override
         public String toString() {
-            return PyTuple.super.toStringIter();
+            return toStringIter("(", ")");
         }
     }
 
@@ -564,7 +701,7 @@ public sealed interface PyValue {
 
         @Override
         public String toString() {
-            return PyTuple.super.toStringIter();
+            return toStringIter("(", ")");
         }
 
         @Override
@@ -582,30 +719,26 @@ public sealed interface PyValue {
      * @param elements value list
      */
     record PyList(List<PyValue> elements) implements PyIterable {
-        /**
-         * Create an empty list.
-         */
-        public PyList() {
-            this(List.of());
+        public static PyList of() {
+            return EMPTY_LIST;
         }
 
-        /**
-         * Create a list from array.
-         *
-         * @param elements elements
-         */
-        public PyList(PyValue... elements) {
-            this(Arrays.asList(elements));
+        public static PyList of(PyValue v) {
+            return new PyList(List.of(v));
+        }
+
+        public static PyList of(PyValue... values) {
+            return new PyList(Arrays.asList(values));
         }
 
         @Override
-        public String rawTypeStr() {
+        public String type() {
             return "list";
         }
 
         @Override
         public List<PyValue> iter() {
-            return elements;
+            return Collections.unmodifiableList(elements);
         }
 
         /**
@@ -625,7 +758,7 @@ public sealed interface PyValue {
 
         @Override
         public String toString() {
-            return "[" + PyIterable.super.toStringIter() + "]";
+            return toStringIter("[", "]");
         }
     }
 
@@ -634,17 +767,33 @@ public sealed interface PyValue {
      *
      * @param elements value list.
      */
-    record PySet(Set<PyValue> elements) implements PyIterable {
+    record PySet(List<PyValue> elements) implements PyIterable {
 
-        /**
-         * Create an empty dict.
-         */
-        public PySet() {
-            this(Set.of());
+        public PySet {
+            var set = new HashSet<PyValue>();
+            for (var key : elements) {
+                if (!(key instanceof PyHashable)) {
+                    throw new RuntimeException("unhashable type : " + key.type());
+                } else if (!set.add(key)) {
+                    throw new RuntimeException("duplicate key : " + key);
+                }
+            }
+        }
+
+        public static PySet of() {
+            return EMPTY_SET;
+        }
+
+        public static PySet of(PyValue v) {
+            return new PySet(List.of(v));
+        }
+
+        public static PySet of(PyValue... values) {
+            return new PySet(Arrays.asList(values));
         }
 
         @Override
-        public String rawTypeStr() {
+        public String type() {
             return "set";
         }
 
@@ -655,41 +804,167 @@ public sealed interface PyValue {
 
         @Override
         public List<PyValue> iter() {
-            return new ArrayList<>(elements);
+            return Collections.unmodifiableList(elements);
+        }
+
+        @Override
+        public boolean equals(Object obj) {
+            if (!(obj instanceof PySet set)) return false;
+            if (size() != set.size()) return false;
+            return new HashSet<>(elements).containsAll(set.elements);
         }
 
         @Override
         public String toString() {
-            return elements.stream().map(PyValue::toString).collect(Collectors.joining(", ", "{", "}"));
+            return toStringIter("{", "}");
+        }
+    }
+
+    /**
+     * represent Python {@code dict[Any, Any]} type.
+     */
+    sealed interface PyDict extends PyIterable {
+
+        static PyDict of() {
+            return EMPTY_DICT;
+        }
+
+        static PyDict of(PyValue k, PyValue v) {
+            return new PyGeneralDict(List.of(k), List.of(v));
+        }
+
+        static PyDict of(String k, PyValue v) {
+            return new PyStrDict(List.of(k), List.of(v));
+        }
+
+        static PyDict of(PyValue k1, PyValue v1,
+                         PyValue k2, PyValue v2) {
+            return new PyGeneralDict(List.of(k1, k2), List.of(v1, v2));
+        }
+
+        static PyDict of(String k1, PyValue v1,
+                         String k2, PyValue v2) {
+            return new PyStrDict(List.of(k1, k2), List.of(v1, v2));
+        }
+
+        @Override
+        default String type() {
+            return "dict";
+        }
+
+        /**
+         * {@return a java {@link List} of keys.}
+         */
+        List<PyValue> keys();
+
+        /**
+         * {@return a java {@link List} of values.}
+         */
+        List<PyValue> values();
+
+        @Override
+        default List<PyValue> iter() {
+            return Collections.unmodifiableList(keys());
+        }
+
+        /**
+         * likes Python {@code dict.items}
+         *
+         * @return a list of {@code (key, value)}
+         */
+        default List<PyTuple2<PyValue, PyValue>> items() {
+            var k = keys();
+            var v = values();
+            return IntStream.range(0, k.size()).mapToObj(i -> {
+                var kk = k.get(i);
+                var vv = v.get(i);
+                return new PyTuple2<>(kk, vv);
+            }).toList();
+        }
+
+        @Override
+        default PyValue get(int i) {
+            return keys().get(i);
+        }
+
+        @Override
+        default boolean contains(Object object) {
+            return keys().contains(object);
+        }
+
+        /**
+         * likes Python {@code dict.__getitem__}
+         *
+         * @param key an associated key
+         * @return corresponded value
+         * @throws NoSuchElementException {@code key} not in the dict.
+         */
+        default PyValue get(PyValue key) {
+            var i = keys().indexOf(key);
+            if (i < 0) throw new NoSuchElementException();
+            return values().get(i);
+        }
+    }
+
+    /**
+     * represent Python {@code dict[Any, Any]} type.
+     */
+    record PyGeneralDict(List<PyValue> keys, List<PyValue> values) implements PyDict {
+        public PyGeneralDict {
+            var set = new HashSet<PyValue>();
+            for (var key : keys) {
+                if (!(key instanceof PyHashable)) {
+                    throw new RuntimeException("unhashable type : " + key.type());
+                } else if (!set.add(key)) {
+                    throw new RuntimeException("duplicate key : " + key);
+                }
+            }
+            if (keys.size() != values.size()) throw new RuntimeException();
+        }
+
+        @Override
+        public boolean equals(Object obj) {
+            if (!(obj instanceof PyDict set)) return false;
+            if (size() != set.size()) return false;
+            return new HashSet<>(keys()).containsAll(keys());
+        }
+
+        @Override
+        public String toString() {
+            return IntStream.range(0, keys.size()).mapToObj(i -> {
+                var k = keys.get(i);
+                var v = values.get(i);
+                return k + ": " + v;
+            }).collect(Collectors.joining(", ", "{", "}"));
         }
     }
 
     /**
      * represent Python {@code dict[str, Any]} type.
      *
-     * @param keys     key name list
-     * @param elements value list.
+     * @param strkeys key name list
+     * @param values  value list.
      */
-    record PyDict(List<String> keys, List<PyValue> elements) implements PyIterable {
+    record PyStrDict(List<String> strkeys, List<PyValue> values) implements PyDict {
 
-        public PyDict {
-            if (keys.size() != new HashSet<>(keys).size()) throw new RuntimeException("duplicate keys");
-            if (keys.size() != elements.size()) throw new RuntimeException();
+        public PyStrDict {
+            if (strkeys.size() != new HashSet<>(strkeys).size()) throw new RuntimeException("duplicate keys");
+            if (strkeys.size() != values.size()) throw new RuntimeException();
         }
 
         /**
          * Create an empty dict.
          */
-        public PyDict() {
+        public PyStrDict() {
             this(List.of(), List.of());
         }
 
         /**
-         * Create a dict from a map;
+         * Create a dict from a String map;
          *
          * @param maps map
          */
-        public PyDict(Map<String, PyValue> maps) {
+        public PyStrDict(Map<String, PyValue> maps) {
             var keys = new ArrayList<String>(maps.size());
             var elements = new ArrayList<PyValue>(maps.size());
             for (var e : maps.entrySet()) {
@@ -700,21 +975,13 @@ public sealed interface PyValue {
         }
 
         @Override
-        public String rawTypeStr() {
-            return "dict";
-        }
-
-        @Override
         public int size() {
-            return elements.size();
+            return strkeys.size();
         }
 
-        /**
-         * {@return a java {@link List} of keys.}
-         */
         @Override
-        public List<PyValue> iter() {
-            return keys.stream().map(it -> (PyValue) new PyStr(it)).toList();
+        public List<PyValue> keys() {
+            return strkeys.stream().map(s -> (PyValue) new PyStr(s)).toList();
         }
 
         /**
@@ -722,17 +989,28 @@ public sealed interface PyValue {
          *
          * @return a list of {@code (key, value)}
          */
-        public List<PyTuple2<PyStr, PyValue>> items() {
-            return IntStream.range(0, keys.size()).mapToObj(i -> {
-                var k = keys.get(i);
-                var v = elements.get(i);
-                return new PyTuple2<>(new PyStr(k), v);
+        public List<PyTuple2<PyValue, PyValue>> items() {
+            return IntStream.range(0, strkeys.size()).mapToObj(i -> {
+                var k = strkeys.get(i);
+                var v = values.get(i);
+                return new PyTuple2<PyValue, PyValue>(new PyStr(k), v);
             }).toList();
         }
 
         @Override
         public PyValue get(int i) {
-            return new PyStr(keys.get(i));
+            return new PyStr(strkeys.get(i));
+        }
+
+        @Override
+        public boolean contains(Object object) {
+            if (object instanceof String k) {
+                return strkeys.contains(k);
+            } else if (object instanceof PyStr(var k)) {
+                return strkeys.contains(k);
+            } else {
+                return false;
+            }
         }
 
         /**
@@ -744,29 +1022,40 @@ public sealed interface PyValue {
         public @Nullable PyValue get(String key) {
             var i = key.indexOf(key);
             if (i < 0) return null;
-            return elements.get(i);
+            return values.get(i);
+        }
+
+        public PyValue get(PyValue key) {
+            if (key instanceof PyStr(var k)) {
+                var i = strkeys.indexOf(k);
+                if (i >= 0) {
+                    return values.get(i);
+                }
+            }
+            throw new NoSuchElementException();
         }
 
         @Override
-        public boolean contains(Object object) {
-            if (object instanceof String k) {
-                return keys.contains(k);
-            } else if (object instanceof PyStr(var k)) {
-                return keys.contains(k);
+        public boolean equals(Object obj) {
+            if (!(obj instanceof PyDict set)) return false;
+            if (size() != set.size()) return false;
+            if (obj instanceof PyStrDict dict) {
+                return new HashSet<>(strkeys).containsAll(dict.strkeys);
             } else {
-                return false;
+                return new HashSet<>(keys()).containsAll(keys());
             }
         }
 
         @Override
         public String toString() {
-            return IntStream.range(0, keys.size()).mapToObj(i -> {
-                var k = keys.get(i);
-                var v = elements.get(i);
+            return IntStream.range(0, strkeys.size()).mapToObj(i -> {
+                var k = strkeys.get(i);
+                var v = values.get(i);
                 return k + ": " + v;
             }).collect(Collectors.joining(", ", "{", "}"));
         }
     }
+
 
     /**
      * represent unsolved input.
@@ -774,6 +1063,11 @@ public sealed interface PyValue {
      * @param token
      */
     record PyToken(String token) implements PyValue {
+        @Override
+        public String type() {
+            return "symbol";
+        }
+
         /**
          * {@return {@link #token} length}
          */
@@ -801,7 +1095,17 @@ public sealed interface PyValue {
      *
      * @param string content
      */
-    record PyStr(String string) implements PyValue {
+    record PyStr(String string) implements PyValue, PyHashable {
+
+        public static PyStr of(CharSequence str) {
+            return new PyStr(str.toString());
+        }
+
+        @Override
+        public String type() {
+            return "str";
+        }
+
         /**
          * {@return {@link #string} length}
          */
@@ -826,6 +1130,12 @@ public sealed interface PyValue {
      * python argument.
      */
     sealed interface PyParameter extends PyValue {
+
+        @Override
+        default String type() {
+            return "parameter";
+        }
+
         /**
          * {@return argument raw string.}
          */
